static/index.css
/* START NORMALIZE */

*,
::before,
::after {
    box-sizing: border-box;
}

html {
    font-family: 'Segoe UI', Roboto, Helvetica, Ariel, sans-serif;
    line-height: 1.15;
    -webkit-text-size-adjust: 100%; /* 2. Prevent adjustments of font size after orientation changes in iOS. */
    -moz-tab-size: 4; /* 3. Use a more readable tab size (opinionated). */
    tab-size: 4; /* 3 */
}

body {
    margin: 5px;
    background-color: #fefefe;
}

/**
Remove the inner border and padding in Firefox.
*/

::-moz-focus-inner {
    border-style: none;
    padding: 0;
}

/**
Restore the focus styles unset by the previous rule.
*/

:-moz-focusring {
    outline: 1px dotted ButtonText;
}

/**
Remove the additional ':invalid' styles in Firefox.
See: https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737
*/

:-moz-ui-invalid {
    box-shadow: none;
}


/* END NORMALIZE */

.container {
    display: grid;
    grid-gap: 10px;
    grid-template: 30px auto auto / 1fr;
    grid-template-areas:
    "header"
    "left"
    "right"
}

#header {
    grid-area: header;
    display: grid;
    grid-template: 1fr / 0fr auto 1fr;
}

@media (min-width: 960px) {
    .container {
        grid-template: 30px 1fr / 1fr 1fr;
        grid-template-areas:
        "header header"
        "left right";
    }

    #header {
        grid-area: header;
        display: grid;
        grid-template: 1fr / 1fr auto 1fr;
    }
}

#header div {
    padding: 5px;
    font-size: 14pt;
}

#header a {
    padding: 5px;
    color: #000;
    text-decoration-style: dashed;
    text-wrap: nowrap;
}

#header a:hover {
    color: #2980b9;
    text-decoration-style: solid;
}

#header > div {
    display: flex;
}

#links {
    justify-content: center;
}

#top-list {
    justify-content: end;
}

#video {
    grid-area: left;
    padding-bottom: 10px;
    border-bottom: #e0e0e0 1px solid;
}

@media (min-width: 960px) {
    #video {
        border-bottom: 0;
    }
}

#my-video {
    width: 100%;
}

#history {
    grid-area: right;
    display: table;
    height: 100%;
}

.row {
    display: table-row;
    cursor: pointer;
    background-color: #fff;
    text-decoration: none;
    color: #000;
}


.row:hover {
    background-color: #f0f0f0;
}

.row:hover .name {
    background-color: #f0f0f0;
    text-decoration: underline;
}

.row-item {
    display: table-cell;
    padding: 5px;
    border: 1px solid #f8f8f8;
    border-right: 0;
    border-left: 0;
}

.icon {
    display: inline-grid;
    place-content: center;
    aspect-ratio: 1;
    min-inline-size: 1.25rem;
    border-radius: 50%;
    width: 1rem;
    height: 1rem;
    color: #aaaaaa;
    visibility: hidden;
}

.icon svg {
    width: 1rem;
    height: 1rem;
}

#history:hover .icon-safe {
    color: #27ae60;
    visibility: visible;
}

#history:hover .icon-unsafe {
    color: #c0392b;
    visibility: visible;
}

.time {
    white-space: nowrap;
}

.success {
    display: inline;
    color: #27ae60;
    opacity: 1;
    padding-left: 5px;
    transition: opacity 200ms;
}

.o-0 {
    opacity: 0;
    cursor: auto;
    user-select: none;
}

.settings {
    display: block;
    width: fit-content;
    padding: 10px;
    border: 1px solid #aaa;
    border-radius: 2px;
    box-shadow: 1px 1px #eee;
}

.setting {
    display: block;
    margin: 5px 5px 5px 0;
}

button {
    border-radius: 2px;
    font-weight: bold;
    border: 1px #2980b9 solid;
    background-color: #fff;
    color: #2980b9;
    padding: 8px;
    cursor: pointer;
}

button:hover {
    background-color: #3498db;
    color: #fff;
}

.settings h4 {
    margin: 0;
}

.settings hr {
    border: 0;
    height: 1px;
    color: #aaa;
    background-color: #aaa;
}

